[gd_scene load_steps=21 format=3 uid="uid://me0wgnsii35r"]

[ext_resource type="Texture2D" uid="uid://c16ud0wpas67b" path="res://assets/sprites/environment/BG_3.png" id="1_kbkx8"]
[ext_resource type="Texture2D" uid="uid://c7fg0ph2f8m4h" path="res://assets/sprites/environment/BG_2.png" id="2_l1h8c"]
[ext_resource type="Texture2D" uid="uid://b8mrl0ivkf4kf" path="res://assets/sprites/environment/BG_1.png" id="3_hckau"]
[ext_resource type="Texture2D" uid="uid://mwm3humh3ied" path="res://assets/sprites/Wooden Pixel Art GUI 32x32.png" id="4_3eyog"]
[ext_resource type="Script" path="res://scripts/options_btn.gd" id="5_3sfwp"]
[ext_resource type="PackedScene" uid="uid://dkmeoegwpwx7b" path="res://scenes/play_txt.tscn" id="5_ftks8"]
[ext_resource type="Script" path="res://scripts/play_btn.gd" id="5_le5rn"]
[ext_resource type="PackedScene" uid="uid://cll0fpfa7be7l" path="res://scenes/play_txt_pressed.tscn" id="6_g1472"]
[ext_resource type="Script" path="res://scripts/credits_btn.gd" id="8_28jek"]
[ext_resource type="PackedScene" uid="uid://bs5v4s7tewnm1" path="res://scenes/credits_txt_pressed.tscn" id="9_iol1h"]
[ext_resource type="PackedScene" uid="uid://b6rcylok3c087" path="res://scenes/credits_txt.tscn" id="10_084yy"]
[ext_resource type="Script" path="res://scripts/quit_btn.gd" id="11_je46a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kn1o4"]
atlas = ExtResource("4_3eyog")
region = Rect2(290, 576, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgli5"]
atlas = ExtResource("4_3eyog")
region = Rect2(290, 608, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s48b"]
atlas = ExtResource("4_3eyog")
region = Rect2(418, 1056, 92, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7epl"]
atlas = ExtResource("4_3eyog")
region = Rect2(418, 1088, 92, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ymvp"]
atlas = ExtResource("4_3eyog")
region = Rect2(418, 1056, 92, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha0jo"]
atlas = ExtResource("4_3eyog")
region = Rect2(418, 1088, 92, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58kcf"]
atlas = ExtResource("4_3eyog")
region = Rect2(418, 512, 92, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x21s"]
atlas = ExtResource("4_3eyog")
region = Rect2(418, 544, 92, 32)

[node name="main_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0

[node name="BG" type="Node2D" parent="."]
position = Vector2(0, 46)

[node name="BG3" type="Sprite2D" parent="BG"]
position = Vector2(992, 314)
scale = Vector2(1.84, 1.84)
texture = ExtResource("1_kbkx8")

[node name="BG2" type="Sprite2D" parent="BG"]
position = Vector2(904, 323)
scale = Vector2(2.12, 2.12)
texture = ExtResource("2_l1h8c")

[node name="BG1" type="Sprite2D" parent="BG"]
position = Vector2(1064, 343)
scale = Vector2(2.36, 2.36)
texture = ExtResource("3_hckau")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="options_btn" type="TextureButton" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 32.0
offset_right = 127.0
offset_bottom = 137.0
pivot_offset = Vector2(35, 16)
texture_normal = SubResource("AtlasTexture_kn1o4")
texture_pressed = SubResource("AtlasTexture_rgli5")
stretch_mode = 5
script = ExtResource("5_3sfwp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -52.0
offset_right = 46.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.0117, 3)
pivot_offset = Vector2(45.8213, 55.6667)
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="play_btn" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_6s48b")
texture_pressed = SubResource("AtlasTexture_v7epl")
stretch_mode = 3
script = ExtResource("5_le5rn")

[node name="play_txt_pressed" parent="CanvasLayer/VBoxContainer/play_btn" instance=ExtResource("6_g1472")]
visible = false
offset_left = 44.22
offset_top = 24.111
offset_right = 44.22
offset_bottom = 24.111
scale = Vector2(0.203, 0.203)

[node name="play_txt" parent="CanvasLayer/VBoxContainer/play_btn" instance=ExtResource("5_ftks8")]
offset_left = 44.2205
offset_top = 23.1618
offset_right = 44.2205
offset_bottom = 23.1618
scale = Vector2(0.203367, 0.203367)

[node name="credits_btn" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_6ymvp")
texture_pressed = SubResource("AtlasTexture_ha0jo")
script = ExtResource("8_28jek")

[node name="credits_txt_pressed" parent="CanvasLayer/VBoxContainer/credits_btn" instance=ExtResource("9_iol1h")]
visible = false
offset_left = 45.667
offset_top = 24.7778
offset_right = 45.667
offset_bottom = 24.7778
scale = Vector2(0.203, 0.203)

[node name="credits_txt" parent="CanvasLayer/VBoxContainer/credits_btn" instance=ExtResource("10_084yy")]
offset_left = 45.6667
offset_top = 24.0
offset_right = 45.6667
offset_bottom = 24.0
scale = Vector2(0.203, 0.203)

[node name="quit_btn" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_58kcf")
texture_pressed = SubResource("AtlasTexture_3x21s")
script = ExtResource("11_je46a")

[connection signal="pressed" from="CanvasLayer/options_btn" to="CanvasLayer/options_btn" method="_on_pressed"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/play_btn" to="CanvasLayer/VBoxContainer/play_btn" method="_on_button_down"]
[connection signal="button_up" from="CanvasLayer/VBoxContainer/play_btn" to="CanvasLayer/VBoxContainer/play_btn" method="_on_button_up"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/play_btn" to="CanvasLayer/VBoxContainer/play_btn" method="_on_pressed"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/credits_btn" to="CanvasLayer/VBoxContainer/credits_btn" method="_on_button_down"]
[connection signal="button_up" from="CanvasLayer/VBoxContainer/credits_btn" to="CanvasLayer/VBoxContainer/credits_btn" method="_on_button_up"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/credits_btn" to="CanvasLayer/VBoxContainer/credits_btn" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/quit_btn" to="CanvasLayer/VBoxContainer/quit_btn" method="_on_pressed"]
